Tapio.io First Commit

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-10 col-md-8">
-                            <h2>Section Title Centered</h2>
-                            <p class="lead"> Stack's visual style is simple yet distinct, making it an ideal starting point for your project whether it be a basic marketing site, or multi-page company presence. </p>
+                            <h2>Tapio makes it easy.</h2>
+                            <p class="lead"> Embed rich digital engagement into creative design.  Connect with your customers, fans and interact with art using your mobile device. </p>
                         </div>
                     </div>
                 </div>
