New Logo and Branding

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <div class="container pos-vertical-center">
                     <div class="row">
                         <div class="col-sm-8 col-md-7">
+						<img alt="background" style = "width:150px;height:auto;opacity:.9" src="img/logo.png">
                             <h1> Tapio.io Spatial Interaction Tags</h1>
                             <p class="lead"><b>
 					Tapio creates interactive experiences where art, architecture, and engagement come together through technology.</b></p>
@@ -48,6 +49,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-10 col-md-8">
+						<img alt="background" style = "width:100px;height:auto;opacity:.9" src="img/logodark.png">
                             <h2>Tapio makes it easy.</h2>
                             <p class="lead"> Embed rich digital engagement into creative design.  Connect with your customers, fans and interact with art using your mobile device. </p>
                         </div>
@@ -125,10 +127,11 @@
                 </div>
                 <div class="container">
                     <div class="row">
-                        <div class="col-md-5 col-sm-7">
+                        <div class="col-md-5 col-sm-7 text-center">
+						<img alt="background" style = "width:100px;height:auto;opacity:.9" src="img/logodark.png">
                             <h3><b>Tapio.io</b><br>7 Bayview Road, Ottawa Ontario</h3>
                             <p class="lead">E: info@tapio.io<br>P: 1-844-623-3645</p>
-                            <p class="lead"> Tapio.io is a prototypeD TEAM Inc. initiative. </p>
+                            <p > Tapio.io is a prototypeD TEAM Inc. initiative. </p>
                         </div>
                     </div>
                 </div>
