New Overview page with features and costing

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                             <h1> Tapio.io Spatial Interaction Tags</h1>
                             <p class="lead"><b>
 					Tapio creates interactive experiences where art, architecture, and engagement come together through technology.</b></p>
-                            <a class="btn btn--primary type--uppercase" href="#"> <span class="btn__text">
+                            <a class="btn btn--primary type--uppercase" href="#howitworks"> <span class="btn__text">
 						See How it Works</span> </a>
                         </div>
                     </div>
@@ -38,13 +38,16 @@
                             <div class="mt--2">
                                 <h1> Activate your creativity with NFC technology. </h1>
                                 <p class="lead"> Bridge the digital divide with your creativity and link your passions with interaction.&nbsp; <br><br>This embedded technology integrates seamlessly with your art or architecture to make interaction immediate, seamless and fun.&nbsp; &nbsp; &nbsp;</p>
-                                <a class="btn btn--primary type--uppercase" href="#customise-template"> <span class="btn__text">
+                                <a class="btn btn--primary type--uppercase" href="#howitworks"> <span class="btn__text">
 							Watch the Videos</span> </a> <span class="block type--fine-print"><br></span> </div>
                         </div>
                         <div class="col-md-7 col-sm-5 col-xs-12"> <img alt="Image" src="img/nfc.png"> </div>
                     </div>
                 </div>
             </section>
+			
+			
+			
             <section class="text-center">
                 <div class="container">
                     <div class="row">
@@ -76,6 +79,8 @@
                     </div>
                 </div>
             </section>
+			
+			
             <section class="text-center imagebg parallax" data-overlay="7">
                 <div class="background-image-holder"> <img alt="background" src="img/tapio2.jpg"> </div>
                 <div class="container">
@@ -87,6 +92,25 @@
                     </div>
                 </div>
             </section>
+			
+ <section class="switchable feature-large" id = "howitworks">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-sm-6 col-xs-12">
+                            <div class="video-cover border--round box-shadow-wide">
+                                <div class="background-image-holder"> <img alt="image" src="img/tapiotag3.jpg"> </div>
+                                <div class="video-play-icon"></div> <iframe data-src="https://www.youtube.com/embed/POTJmAjMbhM?autoplay=1" allowfullscreen="allowfullscreen"></iframe> </div>
+                        </div>
+                        <div class="col-sm-6 col-md-5">
+                            <div class="switchable__text">
+                                <h2>See how artist <a href = "http://komiolaf.com">Komi Olaf</a> is helping to pioneer Tapio.</h2>
+                                <p class="lead"> <a href = "http://komiolaf.com">Komi Olaf</a> uses Tapio to embed interactive tags into his artwork.  Whether original pieces or prints, Komi shares rich media with his fans and connects directly through the Tapio app. </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>			
+			
             <section class="text-center bg--primary">
                 <div class="container">
                     <div class="row">
