New Overview page with features and costing

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                             <h1> Tapio.io Spatial Interaction Tags</h1>
                             <p class="lead"><b>
 					Tapio creates interactive experiences where art, architecture, and engagement come together through technology.</b></p>
-                            <a class="btn btn--primary type--uppercase" href="#howitworks"> <span class="btn__text">
+                            <a class="btn btn--primary type--uppercase" href="overview.html"> <span class="btn__text">
 						See How it Works</span> </a>
                         </div>
                     </div>
@@ -39,7 +39,7 @@
                                 <h1> Activate your creativity with NFC technology. </h1>
                                 <p class="lead"> Bridge the digital divide with your creativity and link your passions with interaction.&nbsp; <br><br>This embedded technology integrates seamlessly with your art or architecture to make interaction immediate, seamless and fun.&nbsp; &nbsp; &nbsp;</p>
                                 <a class="btn btn--primary type--uppercase" href="#howitworks"> <span class="btn__text">
-							Watch the Videos</span> </a> <span class="block type--fine-print"><br></span> </div>
+							Watch the Video</span> </a> <span class="block type--fine-print"><br></span> </div>
                         </div>
                         <div class="col-md-7 col-sm-5 col-xs-12"> <img alt="Image" src="img/nfc.png"> </div>
                     </div>
