New Overview page with features and costing

--- a/overview.html
+++ b/overview.html
@@ -134,7 +134,7 @@
                         <div class="col-sm-6 col-md-3">
                             <div class="feature feature-6"> <i class="icon color--primary material-icons icon--sm">exposure_plus_1</i>
                                 <h5>Guestbook</h5>
-                                <p> Snap, Tap and Tag your photography directly into a virtual guestbook.</p>
+                                <p> Tap and Tag yourself directly into a virtual guestbook.  Leave your mark on a place, or pass on a word of thanks.</p>
                             </div>
                         </div>
                         <div class="col-sm-6 col-md-3">
