New Overview page with features and costing

--- a/overview.html
+++ b/overview.html
@@ -140,7 +140,7 @@
                         <div class="col-sm-6 col-md-3">
                             <div class="feature feature-6"> <i class="icon color--primary material-icons icon--sm">collections</i>
                                 <h5>Collect</h5>
-                                <p> Use the Tapio tag to collect tags. As you explore this wide world, collect interactions and reminder where you were, what you saw, and share your experiences. </p>
+                                <p> Use the Tapio app to virtually collect tags. As you explore this wide world, collect interactions and reminder where you were, what you saw, and share your experiences. </p>
                             </div>
                         </div>
                     </div>
