New Overview page with features and costing

--- a/overview.html
+++ b/overview.html
@@ -164,7 +164,7 @@
                         <div class="col-sm-6 col-md-3">
                             <div class="feature feature-6"> <i class="icon color--primary icon-Shopping-Cart icon--sm"></i>
                                 <h5>Order</h5>
-                                <p> Activate your restaurant for example with Tapio-enabled tables. Let your customers, tap, order, and receive fast services. </p>
+                                <p> Activate your restaurant for example with Tapio-enabled tables. Let your customers tap, order, and receive fast services. </p>
                             </div>
                         </div>
                         <div class="col-sm-6 col-md-3">
