New Overview page with features and costing

--- a/overview.html
+++ b/overview.html
@@ -81,7 +81,7 @@
                     <div class="row">
                         <div class="col-sm-10 col-md-8">
                             <h2><b>Features</b></h2>
-                            <p class="lead"> Once placed, Tapio create an immediate and meaningful connection between visitors and customers with creators and organizations. <br><br> With a simple tap of your phone, you unlock a diverse set of features.</p>
+                            <p class="lead"> Once placed, Tapio creates an immediate and meaningful connection between visitors and customers with creators and organizations. <br><br> With a simple tap of your phone, you unlock a diverse set of features.</p>
                         </div>
                     </div>
                 </div>
