New Overview page with features and costing

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         <div class="col-sm-6">
                             <div class="feature feature-5 boxed boxed--lg boxed--border feature--featured"> <i class="icon material-icons icon--lg">nfc</i>
                                 <div class="feature__body">
-                                    <h5>Near Field Interaction</h5>
+                                    <h5>Near-Field Interaction</h5>
                                     <p> Tapio links creativity with technology to make immediate engagement through objects, art, murals, architectural spaces and products.</p> <a href="#"> Learn More</a> </div>
                             </div>
                         </div>
