--- a/overview.html
+++ b/overview.html
@@ -58,7 +58,7 @@
                         <div class="col-sm-6 col-md-5">
                             <div class="switchable__text">
                                 <h2>Tapio Overview</h2>
-                                <p class="lead"> Tapio is a complete engagement system which allows for digital social engagement and interaction through real-world objects. <br><br> Tapio uses advanced technologies, including near field communication (NFC) tags, to enable a wide variety of social and business interactions through your mobile device. </p>
+                                <p class="lead"> Tapio is a complete engagement system which allows for digital social engagement and interaction through real-world objects. <br><br> Tapio uses advanced technologies, including near-field communication (NFC) tags, to enable a wide variety of social and business interactions through your mobile device. </p>
                                 <div class="text-block">
                                     <h5>Built for Creators</h5>
                                     <p> Creators, including artists, architects, businesses, and institutions can embed these tags within objects, spaces, surfaces, and products to create a custom ‘digital fingerprint’ that is as unique as an individual. </p>
