New Overview page with features and costing

--- a/overview.html
+++ b/overview.html
@@ -65,7 +65,7 @@
                                 </div>
                                 <div class="text-block">
                                     <h5>Built for Businesses</h5>
-                                    <p> Galleries and museums can embed Tapio tags and allow their visitors to digital ‘collect’ works of art, learn about artists, and build their own collection of works they love. </p>
+                                    <p> Galleries and museums can embed Tapio tags and allow their visitors to digitally ‘collect’ works of art, learn about artists, and build their own collection of works they love. </p>
                                 </div>
                                 <div class="text-block">
                                     <h5>Built for Interaction</h5>
