New Overview page with features and costing

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 			
 			
             <section class="text-center imagebg parallax" data-overlay="7">
-                <div class="background-image-holder"> <img alt="background" src="img/tapio2.jpg"> </div>
+                <div class="background-image-holder"> <img alt="background" src="img/tapiobanner.jpg"> </div>
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-10 col-md-8">
